# IronHause

./: .gitignore  CLAUDE.md  README.md  drizzle.config.ts  package.json  pnpm-lock.yaml  skills-lock.json  tailwind.config.ts
.claude/: settings.local.json
app/: globals.css  layout.tsx  page.tsx
app/api/chat/: route.ts
app/api/chat/stream/: route.ts
backend/: README.md  main.py  pyproject.toml
backend/core/: ai.py  auth.py  config.py  database.py
backend/prompts/: __init__.py  instructions.py
backend/routers/: agent.py
backend/schemas/: chat.py
backend/services/: agent_service.py  email_service.py
backend/tools/: __init__.py  booking_tools.py  guardrails.py  lead_tools.py
components/: AIAgentChat.tsx
components/layout/: Footer.tsx  Navbar.tsx
components/sections/: CTA.tsx  Hero.tsx  Pricing.tsx  Programs.tsx  Testimonials.tsx
lib/: api-client.ts  fastapi.ts  ratelimit.ts  schemas.ts
lib/db/: schema.ts
lib/db/migrations/: 0000_first_pestilence.sql  0001_polite_micromax.sql  0002_drop_lead_id_default.sql  0002_fluffy_nitro.sql
lib/db/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  _journal.json
